--- a/Aula 10/ex007.html
+++ b/Aula 10/ex007.html
@@ -25,13 +25,17 @@
 </head>
 <body>
 
-    <div id="area" onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()">
+    <div id="area">
         Interaja...
     </div>
     
     <script>
     
         var a = window.document.getElementById('area')
+        a.addEventListener('click', clicar) // 
+        a.addEventListener('mouseenter', entrar)
+        a.addEventListener('mouseout', sair)
+
         function clicar(){
             a.innerText = 'Clicou!'
             a.style.background = 'red'
@@ -50,6 +54,7 @@
 
 
 
+        //onclick="clicar()" onmouseenter="entrar()" onmouseout="sair()" para colocar no html, no elemento
 
 
     </script>
