terminei todos exercicios

--- a/Aula 16 ex/ex016/modelo.html
+++ b/Aula 16 ex/ex016/modelo.html
@@ -25,13 +25,13 @@
                 </p>
 
                 <p>
-                <input type="button" value="Finalizar"  id="fin">
+                <input type="button" value="Finalizar"  id="fin"  onclick="finalizar()">
             </p>
             </p>
 
-        </div id= "res" >
+        </div>
 
-        <div>
+        <div id= "res">
             
 
             
